# DSFANet

./: .gitignore  README.md  active_learning.py  attacks.py  config.py  data_loader.py  drift_tester.py  ensemble.py  evaluation.py  experiments_main.py  main.py  models.py  preprocessing.py  pyproject.toml  retrain.py  run_experiments.ps1  run_experiments.sh  run_web.ps1  run_web.sh  setup.ps1  setup.sh  start_dashboard.cmd  start_dashboard.ps1  testing.py  web_main.py
docs/: 2026-03-02-operations-log.md
eda/: eda.py
src/: __init__.py  active_learning.py  config.py  data_loader.py  drift_tester.py  eda.py  evaluation.py  retrain.py  runtime.py  shap_analysis.py  testing.py
src/adaptation/: __init__.py  active_learning.py  retrain.py
src/analysis/: eda.py
src/attacker/: __init__.py  base_attack.py  fgsm.py  gdkde.py  mimicry.py  pgd.py
src/data/: __init__.py  data_loader.py
src/experiments/: __init__.py  evaluation.py
src/models/: __init__.py  autoencoder.py  base_model.py  dsfanet.py  ensemble.py  lstm_classifier.py  mlp_classifier.py  networks.py
src/models/ensemble/: __init__.py  base.py  dnn_stacking.py  performance_weighted.py  rank_averaging.py  stacking.py  voting.py  xgboost_stacking.py
src/robustness/: __init__.py  attacks.py  drift_tester.py
src/tests/: testing.py
www/: app.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css
www/app/: globals.css  layout.js  page.jsx
www/app/alerts/: page.jsx
www/app/attacks/: page.jsx
www/app/benchmarks/: page.jsx
www/app/dataset/: page.jsx
www/app/experiments/: page.jsx
www/app/instance/[instanceId]/: page.jsx
www/app/instances/: page.jsx
www/app/model/[modelId]/: page.jsx
www/app/models/: page.jsx
www/app/retrain-strategy/: page.jsx
www/components/: ContentViewport.jsx  DataTableCard.jsx  LoadingOverlay.jsx  NavMenu.jsx  SidebarRetrainControl.jsx  charts.jsx
www/lib/: api.js  dataset.js
