[project]
name = "ensemble-ids"
version = "0.1.0"
description = ""
authors = [
    {name = "mojimoon",email = "cryovit@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "torch>=2.6.0,<3.0.0",
    "shap>=0.47.0,<1.0.0",
    "flask>=3.1.0,<4.0.0",
    "flask-cors>=6.0.0,<7.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "xgboost>=2.1.0,<3.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
priority = "primary"

