[project]
name = "ensemble-ids"
version = "0.1.0"
description = ""
authors = [
    {name = "mojimoon",email = "cryovit@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.2.0,<3.0.0)",
    "pandas (>=2.2.0,<3.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "shap (>=0.47.0,<1.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-cors (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

